Fixed issue 124. 2.8.11 release.